# IoT-basic-examples

./: .gitignore  README.md  readme.rst
.github/: FUNDING.yml
application/: .$sw-architecture.drawio.dtmp  CMakeLists.txt  Dockerfile  sw-architecture.drawio
application/logs/: node3_log.csv  node4_log.csv
application/src/: application1.cpp  application2.cpp  application3.cpp  application4.cpp  init.hpp  listener.hpp  myFunctions.hpp  node1_pub.cpp  node2_pub.cpp  node3_sub.cpp  node4_sub.cpp  publisher1.cpp.obsolete  publisher2.cpp.obsolete  swc1_pub.cpp  swc2_pub.cpp  swc3_sub.cpp  swc4_sub.cpp
helloworld/: subscriber.cpp
listeners/reader-listener/: CMakeLists.txt
listeners/reader-listener/data/: Data.idl
listeners/reader-listener/src/: init.cpp  listener.hpp  myFunctions.hpp  publisher.cpp  publisher1.cpp  publisher2.cpp  subscriber_DataReaderListener.cpp  subscriber_SubscriberListener.cpp
listeners/writer-listener/: CMakeLists.txt  readme.rst
listeners/writer-listener/data/: Data.idl
listeners/writer-listener/src/: listener.hpp  myFunctions.hpp  publisher_DataWriterListener.cpp  publisher_DomainParticipantListener.cpp  publisher_PublisherListener.cpp
listeners/writer-reader-listener/src/: listener.hpp  publisher.cpp  subscriber.cpp
logs/: swc1_log.csv  swc3_log.csv
plot/: plot.py  readme.txt  testing.py
plot/temp/: node1_log.csv  node2_log.csv  swc1.csv  swc3.csv
polling-data/src/: publisher.cpp  readme.rst  subscriber.cpp
